update tests and docs

--- a/docs/gettingstarted/quickoverview.ipynb
+++ b/docs/gettingstarted/quickoverview.ipynb
@@ -76,7 +76,7 @@
        "\t\tType of data in file. Can be numerical or experimental\n",
        "    * \u001b[1mcontact\u001b[0m:\n",
        "\t\tContact or responsible person represented by an ORCID-ID.\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000001EA5D64E7C0>):\n",
+       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000001EF17D781C0>):\n",
        "\t\tThe standard name table of the convention.\n",
        "    * \u001b[3mcomment\u001b[0m (default=None):\n",
        "\t\tA comment to further describe the data.\n",
@@ -347,8 +347,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5425536600\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5425536600\">\n",
+       "                        <input id=\"group-ds--5106524700\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5106524700\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
@@ -405,7 +405,7 @@
    "id": "d071903e-e60c-45c6-a4e5-758533975171",
    "metadata": {},
    "source": [
-    "... and get an error, because we are not providing a contact:"
+    "... and get an error, because we are not providing a \"data_type\":"
    ]
   },
   {
@@ -891,21 +891,21 @@
        "  * time     (time) float64 0.0 0.03927 0.07854 0.1178 ... 0.7069 0.7461 0.7854\n",
        "Attributes:\n",
        "    long_name:  air velocity in pipe\n",
-       "    units:      m/s</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'vel'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 21</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-2ce5a351-3565-473a-8d94-d93701006ed0' class='xr-array-in' type='checkbox' ><label for='section-2ce5a351-3565-473a-8d94-d93701006ed0' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>-25.0 -23.31 -22.51 -23.01 -24.55 ... -24.96 -23.28 -22.51 -23.04</span></div><div class='xr-array-data'><pre>array([-25.        , -23.31387349, -22.51019824, -23.00958576,\n",
+       "    units:      m/s</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'vel'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 21</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-55eb6d0d-1fa8-4dc3-b682-c597810b1b2a' class='xr-array-in' type='checkbox' ><label for='section-55eb6d0d-1fa8-4dc3-b682-c597810b1b2a' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>-25.0 -23.31 -22.51 -23.01 -24.55 ... -24.96 -23.28 -22.51 -23.04</span></div><div class='xr-array-data'><pre>array([-25.        , -23.31387349, -22.51019824, -23.00958576,\n",
        "       -24.55067658, -26.32692532, -27.40871436, -27.22987853,\n",
        "       -25.88401336, -24.07549091, -22.75081959, -22.60327943,\n",
        "       -23.71008708, -25.49198361, -27.01639558, -27.48550666,\n",
        "       -26.65380284, -24.95656469, -23.28205885, -22.50665477,\n",
-       "       -23.03616798])</pre></div></div></li><li class='xr-section-item'><input id='section-c75d81ce-0936-424b-a46d-e6cfb28bef7f' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c75d81ce-0936-424b-a46d-e6cfb28bef7f' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 0.03927 ... 0.7461 0.7854</div><input id='attrs-3555bfa4-b64c-415c-9e59-b6dcde584c8e' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-3555bfa4-b64c-415c-9e59-b6dcde584c8e' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-b07119fe-dd5c-444e-800e-c02494757bf2' class='xr-var-data-in' type='checkbox'><label for='data-b07119fe-dd5c-444e-800e-c02494757bf2' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>measurement time</dd><dt><span>units :</span></dt><dd>s</dd></dl></div><div class='xr-var-data'><pre>array([0.      , 0.03927 , 0.07854 , 0.11781 , 0.15708 , 0.19635 , 0.235619,\n",
+       "       -23.03616798])</pre></div></div></li><li class='xr-section-item'><input id='section-c5b6f1f6-c368-4c62-aca4-0ab384452f35' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c5b6f1f6-c368-4c62-aca4-0ab384452f35' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 0.03927 ... 0.7461 0.7854</div><input id='attrs-d39f4d1f-3ad4-42d8-b119-edb454d8e1d6' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-d39f4d1f-3ad4-42d8-b119-edb454d8e1d6' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-963655c0-cb3e-41e0-ae4b-85cbf1a8b855' class='xr-var-data-in' type='checkbox'><label for='data-963655c0-cb3e-41e0-ae4b-85cbf1a8b855' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>measurement time</dd><dt><span>units :</span></dt><dd>s</dd></dl></div><div class='xr-var-data'><pre>array([0.      , 0.03927 , 0.07854 , 0.11781 , 0.15708 , 0.19635 , 0.235619,\n",
        "       0.274889, 0.314159, 0.353429, 0.392699, 0.431969, 0.471239, 0.510509,\n",
-       "       0.549779, 0.589049, 0.628319, 0.667588, 0.706858, 0.746128, 0.785398])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-65bdcf60-fc55-46d3-9e6f-7f9dffc4acb9' class='xr-section-summary-in' type='checkbox'  ><label for='section-65bdcf60-fc55-46d3-9e6f-7f9dffc4acb9' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-87aa8e15-cfa4-4dd4-b452-e621750d2ad2' class='xr-index-data-in' type='checkbox'/><label for='index-87aa8e15-cfa4-4dd4-b452-e621750d2ad2' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([                 0.0, 0.039269908169872414,  0.07853981633974483,\n",
+       "       0.549779, 0.589049, 0.628319, 0.667588, 0.706858, 0.746128, 0.785398])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-79116fc7-9f7a-4b4e-b905-a705552e5d01' class='xr-section-summary-in' type='checkbox'  ><label for='section-79116fc7-9f7a-4b4e-b905-a705552e5d01' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-07d19d82-f56b-4b08-84b1-9cdf3410d073' class='xr-index-data-in' type='checkbox'/><label for='index-07d19d82-f56b-4b08-84b1-9cdf3410d073' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([                 0.0, 0.039269908169872414,  0.07853981633974483,\n",
        "        0.11780972450961724,  0.15707963267948966,  0.19634954084936207,\n",
        "        0.23561944901923448,   0.2748893571891069,   0.3141592653589793,\n",
        "         0.3534291735288517,  0.39269908169872414,  0.43196898986859655,\n",
        "        0.47123889803846897,   0.5105088062083414,   0.5497787143782138,\n",
        "         0.5890486225480862,   0.6283185307179586,    0.667588438887831,\n",
        "         0.7068583470577035,   0.7461282552275759,   0.7853981633974483],\n",
-       "      dtype=&#x27;float64&#x27;, name=&#x27;time&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-06e21281-c0a1-495d-b5ee-a6ce248cdeff' class='xr-section-summary-in' type='checkbox'  checked><label for='section-06e21281-c0a1-495d-b5ee-a6ce248cdeff' class='xr-section-summary' >Attributes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>air velocity in pipe</dd><dt><span>units :</span></dt><dd>m/s</dd></dl></div></li></ul></div></div>"
+       "      dtype=&#x27;float64&#x27;, name=&#x27;time&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-05e4c05d-e0b1-49d8-a4ae-5fa5e27a7fa2' class='xr-section-summary-in' type='checkbox'  checked><label for='section-05e4c05d-e0b1-49d8-a4ae-5fa5e27a7fa2' class='xr-section-summary' >Attributes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>air velocity in pipe</dd><dt><span>units :</span></dt><dd>m/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'vel' (time: 21)>\n",
@@ -1225,8 +1225,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--7951290700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--7951290700\">\n",
+       "                        <input id=\"group-ds--7443008000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--7443008000\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
@@ -1236,17 +1236,17 @@
        "</a></li><li style=\"list-style-type: none; font-style: italic\">data_type : experimental</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10.5281/zenodo.8276716)</li></li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/time-7955723100\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/time-7955729200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/time-7955729200\">time</label>\n",
+       "                <ul id=\"ds-1-/time-7445526700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/time-7445529500\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/time-7445529500\">time</label>\n",
        "                    <span class=\"h5tb-dims\">(21) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : measurement time</li><li style=\"list-style-type: none; font-style: italic\">units : s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/vel-7957728500\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/vel-7957731600\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/vel-7957731600\">vel</label>\n",
+       "                <ul id=\"ds-1-/vel-7446160700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/vel-7446163400\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/vel-7446163400\">vel</label>\n",
        "                    <span class=\"h5tb-dims\">(time: 21) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : air velocity in pipe</li><li style=\"list-style-type: none; font-style: italic\">offset : 10.0</li><li style=\"list-style-type: none; font-style: italic\">scale : 2.5 m/(V s)</li><li style=\"list-style-type: none; font-style: italic\">units : V</li>\n",
        "                </ul>\n",
