--- a/docs/wrapper/CreateFile.ipynb
+++ b/docs/wrapper/CreateFile.ipynb
@@ -5,9 +5,9 @@
    "id": "c2e79c7c-cc3e-47ff-a85c-78f500ff63f7",
    "metadata": {},
    "source": [
-    "# Create an HDF file\n",
+    "# Creating HDF files\n",
     "\n",
-    "To work with HDF5 files, the \"wrapper\"-class `File` is used (aquivilant to `h5py.File`)."
+    "To work with HDF5 files, the \"wrapper\"-class `File` is used (equivalent to `h5py.File`)."
    ]
   },
   {
@@ -37,7 +37,7 @@
    "id": "0e73ec28-d197-4086-ba25-766c188befbf",
    "metadata": {},
    "source": [
-    "Creating a file does not require filename. If not specified, a **temporary file is created**. In this case the file-`mode` is `r+`, otherwise and if not specified, the defualt opening mode is `r` (read-only):"
+    "Creating a file does not require filename. If not specified, a **temporary file is created**. In this case the file-`mode` is `r+`, otherwise and if not specified, the default opening mode is `r` (read-only):"
    ]
   },
   {
